created tests for apm-1275

--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -13,3 +13,4 @@ markers =
     # Jira APM tickets included
     apm_801: a reference to the Jira ticket this test belongs to
     apm_1010
+    apm_1275
