--- a/api_tests/docker.env
+++ b/api_tests/docker.env
@@ -2,9 +2,13 @@ BASE_URL=
 CLIENT_ID=
 CLIENT_SECRET=
 REDIRECT_URI=
-AUTHENTICATION_PROVIDER=
 AUTHENTICATE_URL=
-AUTHENTICATE_USERNAME=
-AUTHENTICATE_PASSWORD=
 API_URL=
 APIGEE_CLIENT_ID=
+INVALID_ASID_CLIENT_ID=
+INVALID_ASID_CLIENT_SECRET=
+INVALID_ASID_REDIRECT_URI=
+APIGEE_API_AUTHENTICATION=
+APIGEE_API_URL=
+PDS_BASE_URL=
+PDS_PROXY=
