--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -1,7 +1,12 @@
+parameters:
+  - name: service_name
+    type: string
+
 steps:
   - task: DockerInstaller@0
     displayName: 'Install Docker'
 
   - bash: make setup
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
+    displayName: Setup Docker
   
