--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -40,3 +40,5 @@ extends:
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
     post_deploy:
       - template: templates/run-integration-tests.yml
+        parameters:
+          service_name: ${{ variables.service_name }}
