--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -3,7 +3,6 @@ parameters:
     type: string
 
 steps:
-
   - bash: |
       pip install virtualenv
       virtualenv test_env
@@ -11,3 +10,13 @@ steps:
       pip install -r requirements.txt
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
     displayName: Setup Tests
+
+  - bash: pytest -v tests/ --junitxml=report.xml
+    workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
+    displayName: Run Integration Tests
+
+  - task: PublishTestResults@2
+    displayName: 'Publish Test Results'
+    inputs:
+      testResultsFiles: '$(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests/test-report.xml'
+      failTaskOnFailedTests: true
