--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -21,11 +21,16 @@ steps:
       export CLIENT_ID="$(API_KEY)"
       export CLIENT_SECRET="$(secret.API_SECRET)"
       export REDIRECT_URI="$(CALLBACK_URL)"
-      export AUTHENTICATE_URL=""
-      export AUTHENTICATE_USERNAME=""
-      export AUTHENTICATE_PASSWORD=""
-      export APIGEE_CLIENT_ID=""
-      export API_URL=""
+      export AUTHENTICATE_URL="https://nhsd-apim-testing-$(APIGEE_ENVIRONMENT).herokuapp.com/"
+      export API_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/hello-world/hello/user"
+      export APIGEE_CLIENT_ID="969567331415.apps.national"
+      export INVALID_ASID_CLIENT_ID="CcmFtKFN2Tgztgoif32hopLqJhL2cqXQ"
+      export INVALID_ASID_CLIENT_SECRET="aaM7W4a8kp747RvV"
+      export INVALID_ASID_REDIRECT_URI="https://example.com/callback"
+      export APIGEE_API_AUTHENTICATION="$(secret.AccessToken)"
+      export APIGEE_API_URL="https://api.enterprise.apigee.com/v1/organizations/nhsd-nonprod
+      export PDS_BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk"
+      export PDS_PROXY="perosnal-demographics-$(APIGEE_ENVIRONMENT)"
 
       pytest -v tests/ --junitxml=test-report.xml
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
