--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -28,7 +28,7 @@ steps:
       export INVALID_ASID_CLIENT_SECRET="aaM7W4a8kp747RvV"
       export INVALID_ASID_REDIRECT_URI="https://example.com/callback"
       export APIGEE_API_AUTHENTICATION="$(secret.AccessToken)"
-      export APIGEE_API_URL="https://api.enterprise.apigee.com/v1/organizations/nhsd-nonprod
+      export APIGEE_API_URL="https://api.enterprise.apigee.com/v1/organizations/nhsd-nonprod"
       export PDS_BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk"
       export PDS_PROXY="personal-demographics-$(APIGEE_ENVIRONMENT)"
 
