--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -11,12 +11,14 @@ steps:
   - bash: |
       pip install virtualenv
       virtualenv test_env
-      ./test_env/scripts/activate
+      source ./test_env/bin/activate
       pip install -r requirements.txt
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
     displayName: Setup Tests
 
   - bash: |
+      source ./test_env/bin/activate
+      
       export BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/oauth2"
       export CLIENT_ID="$(API_KEY)"
       export CLIENT_SECRET="$(secret.API_SECRET)"
