--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -15,8 +15,8 @@ steps:
       source ./test_env/bin/activate
 
       export BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/$(SERVICE_BASE_PATH)"
-      export CLIENT_ID="$(API_KEY)"
-      export CLIENT_SECRET="$(secret.AccessToken)"
+      export CLIENT_ID="$(CLIENT_ID)"
+      export CLIENT_SECRET="$(CLIENT_SECRET)"
       export REDIRECT_URI="https://nhsd-apim-testing-internal-dev.herokuapp.com/callback"
       export AUTHENTICATE_URL="https://nhsd-apim-testing-$(APIGEE_ENVIRONMENT).herokuapp.com/"
       export API_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/hello-world/hello/user"
