--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -9,8 +9,10 @@ steps:
       source ./test_env/bin/activate
       pip install -r requirements.txt
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
-
     displayName: Setup Tests
+
+  - bash: echo "$(APIGEE_USERNAME)"
+  
   - bash: |
       source ./test_env/bin/activate
 
