--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -9,14 +9,14 @@ steps:
       source ./test_env/bin/activate
       pip install -r requirements.txt
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
-    displayName: Setup Tests
+    displayName: Setup integration tests
 
   - bash: |
       source ./test_env/bin/activate
 
       export BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/$(SERVICE_BASE_PATH)"
-      export CLIENT_ID="$(CLIENT_ID)"
-      export CLIENT_SECRET="$(CLIENT_SECRET)"
+      export CLIENT_ID="$(API_KEY)"
+      export CLIENT_SECRET="$(API_SECRET)"
       export REDIRECT_URI="https://nhsd-apim-testing-internal-dev.herokuapp.com/callback"
       export AUTHENTICATE_URL="https://nhsd-apim-testing-$(APIGEE_ENVIRONMENT).herokuapp.com/"
       export API_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/hello-world/hello/user"
@@ -31,10 +31,10 @@ steps:
 
       pytest -v --junitxml=test-report.xml
     workingDirectory: $(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests
-    displayName: Run Integration Tests
+    displayName: Run integration tests
 
   - task: PublishTestResults@2
-    displayName: 'Publish Test Results'
+    displayName: 'Publish integration test results'
     inputs:
       testResultsFiles: '$(Pipeline.Workspace)/s/${{ parameters.service_name }}/$(SERVICE_ARTIFACT_NAME)/api_tests/test-report.xml'
       failTaskOnFailedTests: true
