--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -7,6 +7,7 @@ resources:
   repositories:
     - repository: common
       type: github
+      name: NHSDigital/api-management-utils
       endpoint: NHSDigital
   pipelines:
   - pipeline: build_pipeline
