APM-1163 Retrieve from config

--- a/api_tests/docker.env
+++ b/api_tests/docker.env
@@ -12,3 +12,6 @@ APIGEE_API_AUTHENTICATION=
 APIGEE_API_URL=
 PDS_BASE_URL=
 PDS_PROXY=
+MISSING_ASID_CLIENT_ID=
+MISSING_ASID_CLIENT_SECRET=
+MISSING_ASID_REDIRECT_URI=
