--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -39,10 +39,11 @@ extends:
     config_ids:
       - /ptl/azure-devops/env-internal-dev/test-app/internal-testing-internal-dev/CLIENT_ID
       - /ptl/azure-devops/env-internal-dev/test-app/internal-testing-internal-dev/CLIENT_SECRET
-      - ptl/app-credentials/internal-dev/internal-testing-internal-dev-without-asid/key
-      - ptl/app-credentials/internal-dev/internal-testing-internal-dev-without-asid/secret
-      - ptl/app-credentials/internal-dev/internal-testing-internal-dev-with-asid/key
-      - ptl/app-credentials/internal-dev/internal-testing-internal-dev-with-asid/secret
+    secret_ids:
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITHOUT_ASID_KEY
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITHOUT_ASID_SECRET
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_KEY
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_SECRET
     apigee_deployments:
       - environment: internal-dev
         post_deploy:
