--- a/azure/templates/run-integration-tests.yml
+++ b/azure/templates/run-integration-tests.yml
@@ -21,15 +21,15 @@ steps:
       export AUTHENTICATE_URL="https://nhsd-apim-testing-$(APIGEE_ENVIRONMENT).herokuapp.com/"
       export API_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk/hello-world/hello/user"
       export APIGEE_CLIENT_ID="969567331415.apps.national"
-      export INVALID_ASID_CLIENT_ID=""
-      export INVALID_ASID_CLIENT_SECRET=""
+      export INVALID_ASID_CLIENT_ID="$(INTERNAL_TESTING_WITH_ASID_KEY)"
+      export INVALID_ASID_CLIENT_SECRET="$(INTERNAL_TESTING_WITH_ASID_SECRET)"
       export INVALID_ASID_REDIRECT_URI="https://example.com/callback"
       export APIGEE_API_AUTHENTICATION="$(secret.AccessToken)"
       export APIGEE_API_URL="https://api.enterprise.apigee.com/v1/organizations/nhsd-nonprod"
       export PDS_BASE_URL="https://$(APIGEE_ENVIRONMENT).api.service.nhs.uk"
       export PDS_PROXY="personal-demographics-apm-1275-asid-per-application"
-      export MISSING_ASID_CLIENT_ID=""
-      export MISSING_ASID_CLIENT_SECRET=""
+      export MISSING_ASID_CLIENT_ID="$(INTERNAL_TESTING_WITHOUT_ASID_KEY)"
+      export MISSING_ASID_CLIENT_SECRET="$(INTERNAL_TESTING_WITHOUT_ASID_SECRET)"
       export MISSING_ASID_REDIRECT_URI="https://example.com/callback"
 
       pytest -v --junitxml=test-report.xml
