--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -37,14 +37,25 @@ extends:
       IDENTITY_TARGET_SERVER: identity-server
       VARIABLES_KVM: identity-service-variables
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+    secret_ids:
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITHOUT_ASID_KEY
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITHOUT_ASID_SECRET
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_KEY
+      - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_SECRET
     apigee_deployments:
       - environment: internal-dev
-        functional_test_steps:
-          - template: templates/run-integration-tests.yml
-            parameters:
-              service_name: ${{ variables.service_name }}
-        non_functional_test_steps:
-          - bash: echo 'this is a test'
+        tests:
+          functional_test:
+            steps:
+              - template: templates/run-integration-tests.yml
+                parameters:
+                  service_name: ${{ variables.service_name }}
+            test_app_attributes:
+              asid: 12345
+            test_app_callback_url: "test"
+          non_functional_test:
+            steps:
+              - bash: echo 'this is a test'
         test_app_attributes:
           asid: 12345
       - environment: internal-dev-sandbox
