APM-1163 Try add it to pr pipeline

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -39,3 +39,17 @@ extends:
       IDENTITY_TARGET_SERVER: identity-server
       VARIABLES_KVM: identity-service-variables
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+    apigee_deployments:
+      - environment: internal-dev
+        tests:
+          functional_test:
+            steps:
+              - template: templates/run-integration-tests.yml
+                parameters:
+                  service_name: ${{ variables.service_name }}
+            test_app_attributes:
+              asid: 12345
+            test_app_callback_url: "test"
+          non_functional_test:
+            steps:
+              - bash: echo 'this is a test'
