APM-1163 Try using self

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -46,13 +46,12 @@ extends:
     apigee_deployments:
       - environment: internal-dev
         post_deploy:
-          - template: azure/common/deploy-app.yml@common
+          - template: azure/common/deploy-app.yml@self
             parameters:
               attributes:
                 asid: 12345
           - bash: echo "test"
-          - template: azure/common/deploy-app.yml@common
+          - template: azure/common/deploy-app.yml@self
             parameters:
               attributes:
                 asid: 12345
-
