--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -8,6 +8,7 @@ resources:
     - repository: common
       type: github
       name: NHSDigital/api-management-utils
+      refs: refs/heads/APM-1163-deploy-dev-app
       endpoint: NHSDigital
   pipelines:
   - pipeline: build_pipeline
