APM-1311 Add depends on for internal-qa-sandbox

--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -57,6 +57,8 @@ extends:
         depends_on: 
           - internal_dev
       - environment: internal-qa-sandbox
+        depends_on: 
+          - internal_dev
       - environment: ref
       - environment: dev
       - environment: int
