APM-991 Use apigee RandomLong() to generate random bits.
And "concatenate" the random bits together into a nice base64 encoded
state string, such that we have 4*54=216 bits of entropy.

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -38,3 +38,4 @@ extends:
       IDENTITY_TARGET_SERVER: identity-server
       VARIABLES_KVM: identity-service-variables
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
+      NUM_RANDOM_LONG_INTS_FOR_STATE: 4
