--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -67,4 +67,5 @@ extends:
           IDENTITY_TARGET_SERVER: identity-server-no-smartcard
           VARIABLES_KVM: identity-service-variables-no-smartcard
           ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted-no-smartcard
+          NUM_RANDOM_LONG_INTS_FOR_STATE: 4
       - environment: prod
