--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -7,6 +7,7 @@ markers =
     happy_path: checks happy path scenarios
     token_endpoint: associated with the /token endpoint
     authorize_endpoint: associated with the /authorize endpoint
+    callback_endpoint:  associated with the /callback endpoint
     token_refresh: checking the tokens behaviour
     env: a reference to the Jira ticket number e.g. test_id(750)
 
