--- a/api_tests/docker.env
+++ b/api_tests/docker.env
@@ -3,7 +3,7 @@ CLIENT_ID=
 CLIENT_SECRET=
 REDIRECT_URI=
 AUTHENTICATE_URL=
-API_URL=
+HELLO_WORLD_API_URL=
 APIGEE_CLIENT_ID=
 APIGEE_API_AUTHENTICATION=
 APIGEE_API_URL=
@@ -15,3 +15,5 @@ VALID_ASID_CLIENT_ID=
 VALID_ASID_CLIENT_SECRET=
 MISSING_ASID_CLIENT_ID=
 MISSING_ASID_CLIENT_SECRET=
+JWT_APP_KEY=
+PRIVATE_KEY_LOCATION=
