--- a/azure/azure-release-pipeline.yml
+++ b/azure/azure-release-pipeline.yml
@@ -47,6 +47,9 @@ extends:
       - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITHOUT_ASID_SECRET
       - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_KEY
       - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_SECRET
+      - ptl/azure-devops/${{ parameters.service_name }}/${{ parameters.environment }}/JWT_RS512_PRIVATE_KEY
+      - ptl/azure-devops/${{ parameters.service_name }}/${{ parameters.environment }}/JWT_RS256_PRIVATE_KEY
+      - ptl/azure-devops/${{ parameters.service_name }}/${{ parameters.environment }}/CLIENT_ID
     apigee_deployments:
       - environment: internal-dev
         post_deploy:
@@ -55,10 +58,10 @@ extends:
               service_name: ${{ variables.service_name }}
       - environment: internal-dev-sandbox
       - environment: internal-qa
-        depends_on: 
+        depends_on:
           - internal_dev
       - environment: internal-qa-sandbox
-        depends_on: 
+        depends_on:
           - internal_dev
       - environment: ref
       - environment: dev
