APM-1622 Point to test branch

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -8,6 +8,7 @@ resources:
     - repository: common
       type: github
       name: NHSDigital/api-management-utils
+      ref: refs/heads/APM-1622-test-stage
       endpoint: NHSDigital
   pipelines:
   - pipeline: build_pipeline
