APM-1187 point to new utils branch for profiling

--- a/azure/azure-build-pipeline.yml
+++ b/azure/azure-build-pipeline.yml
@@ -17,6 +17,7 @@ resources:
     - repository: common
       type: github
       name: NHSDigital/api-management-utils
+      ref: APM-1187-speed-up-builds
       endpoint: NHSDigital
 
 variables:
