--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -8,6 +8,7 @@ resources:
     - repository: common
       type: github
       name: NHSDigital/api-management-utils
+      ref: APM-1187-speed-up-builds
       endpoint: NHSDigital
   pipelines:
   - pipeline: build_pipeline
