--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -9,6 +9,7 @@ resources:
       type: github
       name: NHSDigital/api-management-utils
       endpoint: NHSDigital
+      ref: refs/heads/apm-1645-manual-approval-gate
   pipelines:
   - pipeline: build_pipeline
     source: "Identity-Service-Build"
