AMB-495 ammend pr-pipeline to use DEV values

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -36,8 +36,8 @@ extends:
     product_description: ${{ variables.product_description }}
     ping: false
     jinja_templates:
-      IDENTITY_TARGET_SERVER: identity-server
-      VARIABLES_KVM: identity-service-variables
+      IDENTITY_TARGET_SERVER: am.nhsdev.ptl.nhsd-esa.net
+      VARIABLES_KVM: identity-service-internal-dev-DEV-variables
       ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
       NUM_RANDOM_LONG_INTS_FOR_STATE: 4
     config_ids:
