AMB-495 disable integration tests for internal-dev

--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -56,10 +56,10 @@ extends:
       - ptl/app-credentials/internal-dev/INTERNAL_TESTING_WITH_ASID_SECRET
     apigee_deployments:
       - environment: internal-dev
-        post_deploy:
-          - template: ./templates/run-integration-tests.yml
-            parameters:
-              service_name: ${{ variables.service_name }}
+        # post_deploy:
+        #   - template: ./templates/run-integration-tests.yml
+        #     parameters:
+        #       service_name: ${{ variables.service_name }}
       - environment: internal-dev
         service_name: ${{ variables.service_name }}-int
         short_service_name: ${{ variables.short_service_name }}-int
