APM-1701 Disable access + generate token response

--- a/azure/azure-build-pipeline.yml
+++ b/azure/azure-build-pipeline.yml
@@ -17,7 +17,7 @@ resources:
     - repository: common
       type: github
       name: NHSDigital/api-management-utils
-      ref: refs/heads/APM-1733-fix-apidoc-deploy
+      ref: refs/heads/edge
       endpoint: NHSDigital
 
 variables:
