added temporary print to help debug in pipeline

--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --strict-markers -v
+addopts = --strict-markers -v -s
 python_classes = Test*Suite
 junit_family=xunit1
 markers =
